name:           IfElse
version:        0.85
cabal-version:  >= 1.2
license:        BSD3
license-file:   LICENSE
author:         J.R. Heard and Wren Thornton
maintainer:     support@keera.co.uk
category:       Control
description:    Anaphoric and miscellaneous useful control-flow
synopsis:       Anaphoric and miscellaneous useful control-flow
build-type:     Simple

library
  build-depends: base, mtl
  ghc-options: -Wall
  exposed-modules:
      Control.Monad.IfElse
