cabal-version:  >= 1.2
build-type:     Simple

name:           IfElse
version:        0.85
author:         J.R. Heard and Wren Thornton
maintainer:     support@keera.co.uk
license:        BSD3
license-file:   LICENSE
category:       Control
synopsis:       Anaphoric and miscellaneous useful control-flow
description:    Anaphoric and miscellaneous useful control-flow

library
  exposed-modules:
      Control.Monad.IfElse
  build-depends:
    base, mtl
  ghc-options:
    -Wall
